samples/_failures_safe/1761191493_127f58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8f9694d.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_f8f9694d.c:170:13: error: expected declaration or statement at end of input
  170 |             }
      |             ^
./samples/SAFE/__tmp_f8f9694d.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8f9694d.c:170:13: error: expected declaration or statement at end of input
